--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </div>
 
         <ul>
-            <li id="home-menu"><a href="main.html"> Home </a>
+            <li id="home-menu"><a href="index.html"> Home </a>
             </li>
             <li id="work-menu"><a href="work.html"> Work </a>
             </li>
