--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <ul>
-            <li id="home-menu"><a href="main.html"> Home </a>
+            <li id="home-menu"><a href="index.html"> Home </a>
             </li>
             <li id="work-menu"><a href="work.html"> Work </a>
             </li>
@@ -37,7 +37,7 @@
     <img class="menuButton" src="img/ic_menu_white_36dp.png" width="50" height="50">
 
     <!--
-    <div class="header">    
+    <div class="header">
         <div id="headerNav">
             <ul>
                 <li id="home-menu"><a href="main.html"> Home </a>
