--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
         </div>
 
         <ul>
-            <li id="home-menu"><a href="main.html"> Home </a>
+            <li id="home-menu"><a href="index.html"> Home </a>
             </li>
             <li id="work-menu"><a href="work.html"> Work </a>
             </li>
@@ -35,7 +35,7 @@
     </div>
 
     <img class="menuButton" src="img/ic_menu_white_36dp.png" width="50" height="50">
-    
+
 </body>
 
 </html>
