--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
 
     <img class="menuButton" src="img/ic_menu_white_36dp.png" width="50" height="50">
 
-    <a href="DiscoGolem.html"></a>
+    <a href="DiscoGolem.html"> Game </a>
 </body>
 
 </html>
