--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
             </li>
             <li id="resume-menu"><a href="resume.html">  Resumé </a>
             </li>
-<!--
+            <!--
             <li id="contact-menu"><a href="contact.html">  Contact </a>
             </li>
 -->
@@ -36,7 +36,13 @@
 
     <img class="menuButton" src="img/ic_menu_white_36dp.png" width="50" height="50">
 
-    <a href="DiscoGolem.html"> Game </a>
+    <ul>
+        <li><a href="DiscoGolem.html"> Game </a></li>
+
+        <li><a href="ParticleSystems.html"> Particle system</a></li>
+
+        <li><a href="SVM.html"> Feature Detection </a></li>
+    </ul>
 </body>
 
 </html>
