--- a/work.html
+++ b/work.html
@@ -36,7 +36,14 @@
 
     <img class="menuButton" src="img/ic_menu_white_36dp.png" width="50" height="50">
 
-    <a href="DiscoGolem.html"> Game </a>
+    <ul>
+        <li><a href="DiscoGolem.html"> Game </a></li>
+
+        <li><a href="ParticleSystems.html"> Particle system</a></li>
+
+        <li><a href="SVM.html"> Feature Detection </a></li>
+    </ul>
+    
 </body>
 
 </html>
