--- a/SVM.html
+++ b/SVM.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<html>
 <p>
     <strong>CS5310 - Computer Graphics</strong>
 </p>
@@ -229,10 +229,5 @@ plot.roc(l1,prob_Actual)
 
 <p>
     <em>"This blog post is released/meant for viewing on bangerz.co"  </em>
-<<<<<<< HEAD
-</p>
-=======
-</p>
 
 </html>
->>>>>>> master
